Ensure play area does not squish up against sides

--- a/src/Gameboard.module.css
+++ b/src/Gameboard.module.css
@@ -2,6 +2,7 @@
   height: 100vh;
   display: grid;
   grid-template-rows: 1fr 9fr;
+  padding: 0 var(--medium-spacing);
 }
 
 .gameControls {
